--- a/four-col.html
+++ b/four-col.html
@@ -24,24 +24,26 @@
     <link rel="shortcut icon" href="assets/ico/favicon.ico">
   </head>
 <body>
+
 <!-- 
-	Upper Header Section 
--->
+AQUI
+--> 
+
 <div class="navbar navbar-inverse navbar-fixed-top">
 	<div class="topNav">
 		<div class="container">
 			<div class="alignR">
 				<div class="pull-left socialNw">
-					<a href="#"><span class="icon-twitter"></span></a>
-					<a href="#"><span class="icon-facebook"></span></a>
-					<a href="#"><span class="icon-youtube"></span></a>
-					<a href="#"><span class="icon-tumblr"></span></a>
+					<a href="#"><span class="icon-linkedin"></span></a>
+					<a href="https://www.facebook.com/jeftecleiton.santos.7/" target="_blank"><span class="icon-facebook"></span></a>
+					<a href="https://www.instagram.com/jeftecleiton/" target="_blank"><span class="icon-instagram"></span></a>
+					<a href="https://www.youtube.com/@jsdeveloper.website/featured"><span class="icon-youtube"></span></a>
 				</div>
-				<a href="index.html"> <span class="icon-home"></span> Home</a> 
-				<a href="#"><span class="icon-user"></span> My Account</a> 
-				<a href="register.html"><span class="icon-edit"></span> Free Register </a> 
-				<a href="contact.html"><span class="icon-envelope"></span> Contact us</a>
-				<a href="cart.html"><span class="icon-shopping-cart"></span> 2 Item(s) - <span class="badge badge-warning"> $448.42</span></a>
+				<a class="active" href="index.html"> <span class="icon-home"></span> Home</a> 
+				<a href="#"><span class="icon-user"></span> Conta</a> 
+				<a href="register.html"><span class="icon-edit"></span>Cadastre-se </a> 
+				<a href="contact.html"><span class="icon-envelope"></span> Contatos</a>
+				<a href="cart.html"><span class="icon-shopping-cart"></span> 0 Item(s) - <span class="badge badge-warning"> $0</span></a>
 			</div>
 		</div>
 	</div>
@@ -52,12 +54,13 @@ Lower Header Section
 -->
 <div class="container">
 <div id="gototop"> </div>
+
 <header id="header">
 <div class="row">
 	<div class="span4">
 	<h1>
-	<a class="logo" href="index.html"><span>Twitter Bootstrap ecommerce template</span> 
-		<img src="assets/img/logo-bootstrap-shoping-cart.png" alt="bootstrap sexy shop">
+	<a class="logo" href="index.html"><span>teste</span> 
+		<img src="assets/img/jsicone-removebg-preview.png" style="max-width: 80px" alt="jsdeveloper">
 	</a>
 	</h1>
 	</div>
@@ -65,13 +68,13 @@ Lower Header Section
 	<div class="offerNoteWrapper">
 	<h1 class="dotmark">
 	<i class="icon-cut"></i>
-	Twitter Bootstrap shopping cart HTML template is available @ $14
+	Aqui na JS developer Premium, você encontra e descobre o que mais combina com você
 	</h1>
 	</div>
 	</div>
 	<div class="span4 alignR">
-	<p><br> <strong> Support (24/7) :  0800 1234 678 </strong><br><br></p>
-	<span class="btn btn-mini">[ 2 ] <span class="icon-shopping-cart"></span></span>
+	<p><br> <strong> Support Segunda a Sexta no horário comercial: <a href="https://api.whatsapp.com/send?phone=41999037323" target="_blank">whatsapp (41) 999037323</a></strong><br><br></p>
+	<span class="btn btn-mini">[ 0 ] <span class="icon-shopping-cart"></span></span>
 	<span class="btn btn-warning btn-mini">$</span>
 	<span class="btn btn-mini">&pound;</span>
 	<span class="btn btn-mini">&euro;</span>
@@ -80,8 +83,9 @@ Lower Header Section
 </header>
 
 <!--
-Navigation Bar Section 
+AQUI
 -->
+
 <div class="navbar">
 	  <div class="navbar-inner">
 		<div class="container">
