--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
     <link rel="shortcut icon" href="assets/ico/hackicone.ico">
   </head>
 <body>
+
 <!-- 
-	Upper Header Section 
--->
+AQUI
+--> 
+
 <div class="navbar navbar-inverse navbar-fixed-top">
 	<div class="topNav">
 		<div class="container">
@@ -85,8 +87,9 @@ Lower Header Section
 </header>
 
 <!--
-Navigation Bar Section 
+AQUI
 -->
+
 <div class="navbar">
 	  <div class="navbar-inner">
 		<div class="container">
@@ -201,14 +204,14 @@ Body Section
 		<div id="myCarousel" class="carousel slide homCar">
             <div class="carousel-inner">
 			  <div class="item">
-                <img style="width:100%" src="assets/img/bootstrap_free-ecommerce.png" alt="bootstrap ecommerce templates">
+                <img style="width:100%" src="assets/img/joaleria.jpeg" alt="bootstrap ecommerce templates">
                 <div class="carousel-caption">
                       <h4>Bootstrap shopping cart</h4>
                       <p><span>Very clean simple to use</span></p>
                 </div>
               </div>
 			  <div class="item">
-                <img style="width:100%" src="assets/img/carousel1.png" alt="bootstrap ecommerce templates">
+                <img style="width:100%" height="50%" src="assets/img/jardinagem.jpeg" alt="bootstrap ecommerce templates">
                 <div class="carousel-caption">
                       <h4>Bootstrap Ecommerce template</h4>
                       <p><span>Highly Google seo friendly</span></p>
